# swagger/v1/swagger.yaml
@@ -4,150 +4,6 @@ info:
   title: API V1
   version: v1
 paths:
-  "/api/users_passwords":
-    put:
-      summary: change password
-      tags:
-      - Change password
-      security:
-      - bearerAuth: []
-      parameters: []
-      responses:
-        '200':
-          description: Cannot update password
-          content:
-            application/json:
-              example:
-                success: false
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                new_password:
-                  type: string
-                  example: dummy_new_password
-  "/api/users_registrations":
-    post:
-      summary: Sign up by email
-      tags:
-      - Sign up by email
-      parameters: []
-      responses:
-        '200':
-          description: Cannot register
-          content:
-            application/json:
-              example:
-                success: true
-                user:
-                  id: 19
-                  email: user_1@jitera.com
-                  password: 
-                  phone: 
-                  name: 
-                  created_at: '2021-12-02T16:55:50.696+09:00'
-                  updated_at: '2021-12-02T16:55:50.696+09:00'
-                error_message: 'translation missing: en.email_login.failed_to_sign_up'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  example: user@jitera.com
-                password:
-                  type: string
-                  example: dummy_password
-  "/api/users_reset_password_requests":
-    post:
-      summary: Reset password request
-      tags:
-      - Reset password request
-      parameters: []
-      responses:
-        '200':
-          description: request sent
-          content:
-            application/json:
-              example:
-                success: true
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  example: user@jitera.com
-  "/api/users_sessions":
-    post:
-      summary: Sign in by email
-      tags:
-      - Sign in by email
-      parameters: []
-      responses:
-        '200':
-          description: Cannot register
-          content:
-            application/json:
-              example:
-                user:
-                  id: 19
-                  email: user_1@jitera.com
-                  password: 
-                  phone: 
-                  name: 
-                  created_at: '2021-12-02T16:55:50.696+09:00'
-                  updated_at: '2021-12-02T16:55:50.696+09:00'
-                access_token:
-                  token: eyJraWQiOiI0alU4RTNvZEh0QmFlekJtVV9qMkNRQjBLTjdNSWQ4ZTZoNS1YTEFYY0pFIiwiYWxnIjoiSFM1MTIifQ.eyJpYXQiOjE2NDI0Mzk2ODIsImp0aSI6IjViMWRiYjdjLWJlYjItNGIyOC1hZDc3LWFlYTI2YWRkMGRjYSIsInVzZXIiOnsiaWQiOjIsImVtYWlsIjoic3Nzc3NzYUBnbWFpbC5jb20ifX0.kyhvj_rwVeZojtq_FpxofPEZxCPxHAm-iECkgkTUUWuID-mV12VOeThr-GfpmNiVsGgWq5rPoPmVai7F6f0Izg
-                success: true
-                error_message: 許可されていない動作です
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  example: user@jitera.com
-                password:
-                  type: string
-                  example: dummy_password
-  "/api/users_verify_reset_password_requests":
-    post:
-      summary: Verify reset password request
-      tags:
-      - Verify reset password request
-      parameters: []
-      responses:
-        '200':
-          description: request sent
-          content:
-            application/json:
-              example:
-                success: true
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                reset_token:
-                  type: string
-                  example: dummy_reset_token
-                password:
-                  type: string
-                  example: dummy_password
-                password_confirmation:
-                  type: string
-                  example: dummy_password
   "/api/categories/{id}":
     delete:
       summary: Destroy categories
@@ -599,7 +455,7 @@ paths:
         description: id
         required: true
         schema:
-          type: string
+          type: integer
       responses:
         '200':
           description: delete
@@ -642,14 +498,14 @@ paths:
         description: id
         required: true
         schema:
-          type: string
+          type: integer
       responses:
         '200':
           description: update
           content:
             application/json:
               example:
-                recipes:
+                recipe:
                   id: integer
                   created_at: datetime
                   updated_at: datetime
@@ -673,7 +529,7 @@ paths:
             schema:
               type: object
               properties:
-                recipes:
+                recipe:
                   type: object
                   properties:
                     title:
@@ -706,7 +562,7 @@ paths:
         description: id
         required: true
         schema:
-          type: string
+          type: integer
       responses:
         '200':
           description: show
@@ -749,7 +605,7 @@ paths:
           content:
             application/json:
               example:
-                recipes:
+                recipe:
                   id: integer
                   created_at: datetime
                   updated_at: datetime
@@ -773,7 +629,7 @@ paths:
             schema:
               type: object
               properties:
-                recipes:
+                recipe:
                   type: object
                   properties:
                     title:
